feat: completa filtros midias e premium de anuncios admin
