# backend/src/main/java/br/com/topsdojob/v3/application/admin/readonly/dto/AdminLocalizacaoSanitizadaDto.java
@@ -3,5 +3,6 @@ package br.com.topsdojob.v3.application.admin.readonly.dto;
 public record AdminLocalizacaoSanitizadaDto(
         String uf,
         String cidade,
-        String bairro) {
+        String bairro,
+        String enderecoResumido) {
 }
